@@ -21,8 +21,8 @@ plugins {
   id("com.github.ben-manes.versions") version "0.54.0"
   java
   application
-  id("com.gradleup.shadow") version "9.4.1"
-  id("org.sonarqube") version "7.3.0.8198"
+  id("com.gradleup.shadow") version "9.6.0"
+  id("org.sonarqube") version "7.3.1.8318"
 }
 
 repositories {
@@ -31,19 +31,20 @@ repositories {
 
 application {
   mainClass.set("com.cburch.logisim.Main")
+  applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
 }
 
 dependencies {
   implementation("org.hamcrest:hamcrest:3.0")
   implementation("javax.help:javahelp:2.0.05")
-  implementation("com.fifesoft:rsyntaxtextarea:3.6.2")
+  implementation("com.fifesoft:rsyntaxtextarea:3.6.3")
   implementation("net.sf.nimrod:nimrod-laf:1.2")
   implementation("org.drjekyll:colorpicker:2.0.1")
   implementation("at.swimmesberger:swingx-core:1.6.8")
   implementation("org.scijava:swing-checkbox-tree:1.0.2")
   implementation("org.slf4j:slf4j-api:2.0.18")
   implementation("org.slf4j:slf4j-simple:2.0.18")
-  implementation("com.formdev:flatlaf:3.7.1")
+  implementation("com.formdev:flatlaf:3.7.2")
   implementation("commons-cli:commons-cli:1.11.0")
   implementation("com.vladsch.flexmark:flexmark-all:0.64.8")
   implementation("org.apache.commons:commons-text:1.15.0")
@@ -52,8 +53,8 @@ dependencies {
   // See: https://github.com/logisim-evolution/logisim-evolution/issues/709
   // implementation("org.apache.xmlgraphics:batik-swing:1.14")
 
-  testImplementation(platform("org.junit:junit-bom:6.1.0"))
-  testImplementation("org.junit.jupiter:junit-jupiter:6.1.0")
+  testImplementation(platform("org.junit:junit-bom:6.1.2"))
+  testImplementation("org.junit.jupiter:junit-jupiter:6.1.2")
   testImplementation("org.mockito:mockito-junit-jupiter:5.23.0")
   testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
@@ -171,6 +172,7 @@ extra.apply {
       "--input", packageInputDir,
       "--main-class", "com.cburch.logisim.Main",
       "--main-jar", shadowJarFilename,
+      "--java-options", "--enable-native-access=ALL-UNNAMED",
       "--copyright", copyrights,
       "--description", "Digital logic design tool and simulator",
       "--vendor", "${project.name} developers",
@@ -861,6 +863,7 @@ tasks {
 
   test {
     useJUnitPlatform()
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
 //    testLogging {
 //      events("passed", "skipped", "failed")
 //    }
